2022-07-08  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags

	* Consider variable compressed (and thus requiring chunking) in	nco_cnk_sz_set_trv() whenever _any_ filters have been applied to it

	* Add NC_COMPACT to metadata printing

	* Add NC_EINVAL debugging to nco_def_var_chunking()

	* NCO 5.1.0-beta04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.0-beta04: Steerage';git push
	git tag -a 5.1.0-beta04 -m 'all: documentation, polishing, default levels, dns, blosc';git push --tags

	* Invoke known filters by generic nc_var_def_filter() when given ID as name in filter string

	* Clarify ncremap -m map-file usage in code and -G grd_sng usage in manual

2022-07-07  Charlie Zender  <zender@uci.edu>

	* Add Blosc examples to documentation

	* Pass unknown IDs through to invocation execution

	* Build cmp_sng_glb with filter ID as name when filter is unknown

	* Build nco_cdc_lst_glb using mostly nc_inq_filter_avail()

	* Tidy Blosc support

2022-07-06  Charlie Zender  <zender@uci.edu>

	* Realize that Blosc fails on benchmark EAM file, succeeds on simpler files, unsure why

	* Default Blosc to LZ, decode Blosc subcompressors in _Filter metadata

	* Reformulate implementation of default levels to include BLOSC filters

	* Rework listing of BLOSC filters

	* BLOSC filters work! Allow BLOSC Shuffle to pre-empt HDF5 Shuffle

2022-07-04  Charlie Zender  <zender@uci.edu>

	* Bump next version to 5.1.0 instead of 5.0.8

2022-07-03  Charlie Zender  <zender@uci.edu>

	* Merge CR figures with text more naturally

	* NCO 5.0.8-beta03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-beta03: Backslapper';git push
	git tag -a 5.0.8-beta03 -m 'all: documentation, polishing, default levels, dns';git push --tags
