@@ -1,1 +1,1 @@
-5.1.0-beta04
+5.1.0-beta05
