@@ -1,8 +1,12 @@
-2022-07-08  Charlie Zender  <zender@uci.edu>
+2022-07-09  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.0 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
 	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
+
+	* Return from nco_flt_def_wrp() with old (pre-4.7.4) netCDF libraries before encountering new API calls
+
+2022-07-08  Charlie Zender  <zender@uci.edu>
 
 	* Consider variable compressed (and thus requiring chunking) in	nco_cnk_sz_set_trv() whenever _any_ filters have been applied to it
 
